--- a/lib/config/settings.yaml
+++ b/lib/config/settings.yaml
@@ -9,7 +9,7 @@
 
 :development:
   <<: *defaults
-  :database: postgres://localhost/evercam_dev
+  :database: <%= ENV['DATABASE_URL'] %>
 
 :test:
   <<: *defaults
