--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,6 @@ addons:
 
 before_script:
   - createdb evercam_tst
-  - ./schema/build evercam_tst
+  - ./schema/clone evercam_tst
+  - ./schema/apply evercam_tst ./schema/0002
 
