--- a/lib/config/settings.yaml
+++ b/lib/config/settings.yaml
@@ -1,8 +1,11 @@
 :defaults: &defaults
   :cookies:
     :secret: qwertyuiop
+  :intercom:
+    :app_id: f9c1fd60de50d31bcbc3f4d8d74c9c6dbc40e95a
+    :api_key: <%= ENV['INTERCOM_API_KEY'] %>
   :amazon:
-    :access_key_id: <%= ENV['AWS_ACCESS_KEY'] %>
+    :access_key_id: AKIAI5S44JBLDLGUKIIA
     :secret_access_key: <%= ENV['AWS_SECRET_KEY'] %>
     :route53:
       :evr.cm: Z15MY0AN5PFWCW
