adding initial work on grape-swagger integration

--- a/lib/config/settings.yaml
+++ b/lib/config/settings.yaml
@@ -4,6 +4,12 @@
   :intercom:
     :app_id: f9c1fd60de50d31bcbc3f4d8d74c9c6dbc40e95a
     :api_key: <%= ENV['INTERCOM_API_KEY'] %>
+  :swagger:
+    :v1:
+      :api_version: '1.0'
+      :mount_path: swagger
+      :hide_documentation_path: true
+      :base_path: http://localhost:9393/v1
   :amazon:
     :access_key_id: AKIAI5S44JBLDLGUKIIA
     :secret_access_key: <%= ENV['AWS_SECRET_KEY'] %>
