update ssl enforcer to not render html body on api redirect responses

--- a/lib/config/settings.yaml
+++ b/lib/config/settings.yaml
@@ -39,6 +39,7 @@
   :api:
     :ssl:
       :force_secure_cookies: false
+      :redirect_html: false
   :cookies:
     :secret: <%= ENV['SESSION_COOKIE_SECRET'] %>
   :swagger:
