updated version of ssl enforcer to use custom redirect response body

--- a/lib/config/settings.yaml
+++ b/lib/config/settings.yaml
@@ -39,7 +39,7 @@
   :api:
     :ssl:
       :force_secure_cookies: false
-      :redirect_html: false
+      :redirect_html: "Sorry, all API calls must be made via https. Redirecting...\n"
   :cookies:
     :secret: <%= ENV['SESSION_COOKIE_SECRET'] %>
   :swagger:
