making stging env swagger connect over https

--- a/lib/config/settings.yaml
+++ b/lib/config/settings.yaml
@@ -77,5 +77,5 @@
       :api_version: '1.0'
       :mount_path: swagger
       :hide_documentation_path: true
-      :base_path: http://qqq.evercam.io/v1
+      :base_path: https://qqq.evercam.io/v1
 
