New donmain for swagger, stripped documentation

--- a/lib/config/settings.yaml
+++ b/lib/config/settings.yaml
@@ -50,7 +50,7 @@
       :api_version: '1.0'
       :mount_path: swagger
       :hide_documentation_path: true
-      :base_path: https://www.evercam.io/v1
+      :base_path: https://dashboard.evercam.io/v1
   :sidekiq:
     :url: <%= ENV['REDISCLOUD_URL'] %>
     :namespace: sidekiq
