3scale automatic singup

--- a/lib/config/settings.yaml
+++ b/lib/config/settings.yaml
@@ -22,6 +22,8 @@
     :secret_access_key: <%= ENV['AWS_SECRET_KEY'] %>
     :route53:
       :evr.cm: Z15MY0AN5PFWCW
+  :threescale:
+    :provider_key: <%= ENV['3SCALE_PROVIDER_KEY'] %>
 
 :development:
   <<: *defaults
