--- a/lib/config/settings.yaml
+++ b/lib/config/settings.yaml
@@ -23,6 +23,7 @@
     :route53:
       :evr.cm: Z15MY0AN5PFWCW
   :threescale:
+    :url: https://evercam-admin.3scale.net/
     :provider_key: <%= ENV['THREESCALE_PROVIDER_KEY'] %>
 
 :development:
