--- a/lib/config/settings.yaml
+++ b/lib/config/settings.yaml
@@ -5,6 +5,7 @@
     :app_id: f9c1fd60de50d31bcbc3f4d8d74c9c6dbc40e95a
     :api_key: <%= ENV['INTERCOM_API_KEY'] %>
   :api:
+    :timeout: 5
     :ssl:
       :only_environments: production
   :swagger:
