--- a/lib/config/settings.yaml
+++ b/lib/config/settings.yaml
@@ -14,6 +14,7 @@
       :mount_path: swagger
       :hide_documentation_path: true
       :base_path: http://localhost:9292/v1
+      :hide_format: true
   :sidekiq:
     :url: redis://localhost:6379/0
     :namespace: sidekiq
