--- a/spec/cassettes/API_cameras/test.yml
+++ b/spec/cassettes/API_cameras/test.yml
@@ -1247,4 +1247,23 @@ http_interactions:
         ZoPNNPFMD//Zccp3
     http_version: 
   recorded_at: Fri, 07 Mar 2014 17:05:04 GMT
+- request:
+    method: get
+    uri: http://admin:xxx@89.101.225.158:8105/Streaming/channels/1/picture
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Typhoeus - https://github.com/typhoeus/typhoeus
+  response:
+    status:
+      code: 0
+      message: 
+    headers: {}
+    body:
+      encoding: UTF-8
+      string: ''
+    http_version: 
+  recorded_at: Tue, 11 Mar 2014 12:21:57 GMT
 recorded_with: VCR 2.8.0
