--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -27,7 +27,7 @@
     :provider_key: <%= ENV['THREESCALE_PROVIDER_KEY'] %>
   :testserver: false
   :snapshots:
-    :url: http://snap.evercam.io/
+    :url: https://snap.evercam.io/
     :key: <%= ENV['SNAP_KEY'] %>
     :iv: <%= ENV['SNAP_IV'] %>
 
