--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -30,6 +30,8 @@
     :url: https://snap.evercam.io/
     :key: <%= ENV['SNAP_KEY'] %>
     :iv: <%= ENV['SNAP_IV'] %>
+  :airbrake:
+     :api_key: 40b9c667b991a7e0530f07523cebb573
 
 :development:
   <<: *defaults
