reverted lat and long order

--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -25,7 +25,7 @@
   :threescale:
     :url: https://evercam-admin.3scale.net/
     :provider_key: <%= ENV['THREESCALE_PROVIDER_KEY'] %>
-  :testserver: false
+  :testserver: true
   :snapshots:
     :url: https://snap.evercam.io/
     :key: <%= ENV['SNAP_KEY'] %>
