--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -104,4 +104,5 @@
       :mount_path: swagger
       :hide_documentation_path: true
       :base_path: http://proxy.evr.cm:9292/v1
+  :testserver: true
 
