Renamed sidekiq queues, made concurrency configurable

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -1,6 +1,5 @@
 :verbose: false
-:concurrency:  5
 :queues:
-  - [specific_worker, 5]
-  - [async_worker, 5]
+  - [frequent, 5]
+  - [async, 5]
   - [default, 1]
