Updated DNS worker to use old AWS account

--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -20,6 +20,9 @@
   :amazon:
     :access_key_id: <%= ENV['AWS_ACCESS_KEY'] %>
     :secret_access_key: <%= ENV['AWS_SECRET_KEY'] %>
+  :amazon_mhlabs:
+    :access_key_id: <%= ENV['AWS_ACCESS_KEY_MHLABS'] %>
+    :secret_access_key: <%= ENV['AWS_SECRET_KEY_MHLABS'] %>
     :route53:
       :evr.cm: Z15MY0AN5PFWCW
   :threescale:
