Added rtmp proxy url to camera model, removed hls url temporarily

--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -35,8 +35,8 @@
     :iv: <%= ENV['SNAP_IV'] %>
   :airbrake:
      :api_key: 40b9c667b991a7e0530f07523cebb573
-  :hls:
-     :base_path: https://hls.evercam.io:9999
+  :streams:
+    :rtmp_path: rtmp://streams.evercam.io:1935
 
 :development:
   <<: *defaults
