Fixed `Evercam::Config[:api][:timeout]` undefined in production

--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -58,6 +58,7 @@
   :database: <%= ENV['DATABASE_URL'] %>
   :api:
     :ssl:
+      :timeout: 5
       :force_secure_cookies: false
       :redirect_html: "Sorry, all API calls must be made via https. Redirecting...\n"
   :cookies:
