--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -1,8 +1,17 @@
 :verbose: false
 :queues:
-  - [frequent, 5]
-  - [bennett, 8]
   - [async, 10]
   - [cache, 10]
   - [default, 1]
   - [heartbeat, 1]
+  - [bennett, 9]
+  - [carrollszoocam, 9]
+  - [gpocam, 9]
+  - [wayra-office, 9]
+  - [wayra-agora, 9]
+  - [wayrahikvision, 9]
+  - [zipyard-navan-foh, 9]
+  - [zipyard-ranelagh-foh, 9]
+  - [ndrc-main, 9]
+  - [ndrc-foodcam, 9]
+  - [gemcon-cathalbrugha, 9]
