Added queues for new cameras

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -17,3 +17,6 @@
   - [ndrc-foodcam, 9]
   - [gemcon-cathalbrugha, 9]
   - [smartcity1, 9]
+  - [treacyconsulting1, 9]
+  - [treacyconsulting2, 9]
+  - [treacyconsulting3, 9]
