Added dcctestdumping cameras to frequently checked list

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -21,3 +21,5 @@
   - [treacyconsulting2, 9]
   - [treacyconsulting3, 9]
   - [stephens-green, 9]
+  - [dcctestdumping1, 9]
+  - [dcctestdumping2, 9]
