Added cebit cameras to frequently checked

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -23,3 +23,6 @@
   - [stephens-green, 9]
   - [dcctestdumping1, 9]
   - [dcctestdumping2, 9]
+  - [cebit-hiks, 9]
+  - [cebit-axis, 9]
+  - [cebit-hikb, 9]
