--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -31,7 +31,7 @@
     :provider_key: <%= ENV['THREESCALE_PROVIDER_KEY'] %>
   :testserver: false
   :snapshots:
-    :url: https://snap.evercam.io/
+    :url: https://media.evercam.io/
     :key: <%= ENV['SNAP_KEY'] %>
     :iv: <%= ENV['SNAP_IV'] %>
   :airbrake:
