Replaced dcctest cameras with a new one

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -22,8 +22,7 @@
   - [treacyconsulting2, 9]
   - [treacyconsulting3, 9]
   - [stephens-green, 9]
-  - [dcctestdumping1, 9]
-  - [dcctestdumping2, 9]
+  - [dcctestdumpinghk, 9]
   - [beefcam1, 9]
   - [beefcam2, 9]
   - [beefcammobile, 9]
