Added support for camera status checks via Elixir
* Removed requeueing paid camera jobs

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -3,26 +3,7 @@
 :queues:
   - [async, 10]
   - [cache, 10]
+  - [status, 10]
   - [from_elixir, 10]
   - [default, 1]
   - [heartbeat, 1]
-  - [bennett, 9]
-  - [carrollszoocam, 9]
-  - [gpocam, 9]
-  - [wayra-office, 9]
-  - [wayra-agora, 9]
-  - [wayrahikvision, 9]
-  - [zipyard-navan-foh, 9]
-  - [zipyard-ranelagh-foh, 9]
-  - [ndrc-main, 9]
-  - [ndrc-foodcam, 9]
-  - [gemcon-cathalbrugha, 9]
-  - [smartcity1, 9]
-  - [treacyconsulting1, 9]
-  - [treacyconsulting2, 9]
-  - [treacyconsulting3, 9]
-  - [stephens-green, 9]
-  - [dcctestdumpinghk, 9]
-  - [beefcam1, 9]
-  - [beefcam2, 9]
-  - [beefcammobile, 9]
