--- a/.ruby-style.yml
+++ b/.ruby-style.yml
@@ -202,7 +202,7 @@ Style/HashSyntax:
   Description: 'Prefer Ruby 1.9 hash syntax { a: 1, b: 2 } over 1.8 syntax { :a =>
     1, :b => 2 }.'
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#hash-literals
-  Enabled: true
+  Enabled: false
   EnforcedStyle: ruby19
   SupportedStyles:
   - ruby19
